Added project aim in README

--- a/README
+++ b/README
@@ -1,2 +1,5 @@
 README
 ======
+
+My aim is to help people learn git by creating dummy projects and explaining 
+the concepts by giving the exact steps to follow and try the concepts.
