--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 README
 ======
 
-My aim is to help people learn git by creating dummy projects and explaining 
-the concepts by giving the exact steps to follow and try the concepts.
+This project aim to help people learn git by creating dummy projects 
+and explaining the concepts by giving the exact steps to follow and 
+to help jump-start on git use cases.
