--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 README
 ======
 
-This project aim to help people learn git by creating dummy projects 
-and explaining the concepts by giving the exact steps to follow and 
-to help jump-start on git use cases.
+This project aim is to help people learn git by creating dummy projects 
+and explaining the concepts by giving the exact steps to follow using git
+to learn git.
