--- a/README
+++ b/README
@@ -1,6 +1,9 @@
 README
 ======
 
-This project aim is to help people learn git by creating dummy projects 
-and explaining the concepts by giving the exact steps to follow using git
-to learn git.
+You learn when you use it.
+
+It will give you first basing commands and will start building up
+on those.
+
+My aim is to teach you git by git.
